--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 <script>
 function solve (inp)
 {
-
+document.getElementById("result").innerHTML ="";
+  
   var perArr = permut(inp);
 
   var fullArr = [];
