--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ finalArr.push(fullArr[i][k]);
 //  document.getElementById("result").innerHTML += $Spelling.BinSpellCheck( inp);
 //   document.getElementById("result").innerHTML += fullArr[i][k];
 //
-// console.log(fullArr[i][k]);
+ console.log(fullArr[i][k]);
 //
 //   document.getElementById("result").innerHTML += " ";
 }
@@ -54,7 +54,7 @@ for(var l=0;l<finalArr.length;l++)
 //  document.getElementById("result").innerHTML+=  $Spelling.BinSpellCheck(finalArr[l])
     document.getElementById("result").innerHTML += finalArr[l];
     document.getElementById("result").innerHTML += " ";
-    console.log(finalArr[l]);
+//    console.log(finalArr[l]);
   }
 }
 }
